trunk/Archive2/02/7dce9fc8d3ce3f/output
main.cpp:5:27: error: expected ';' at end of declaration list
    virtual void foo() = 0
                          ^
                          ;
1 error generated.
